// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > components > view > index should have structured content 1`] = `
<section
  aria-hidden={true}
  className="css-296fln engage__view"
  style={
    Object {
      "display": "block",
    }
  }
>
  <_default
    noContentPortal={false}
    noScrollOnKeyboard={false}
    setContentRef={[MockFunction]}
  >
    <div>
      Page #1
    </div>
  </_default>
</section>
`;

exports[`engage > components > view > index should initialize with visible route 1`] = `
<ViewContainer
  aria-hidden={true}
  background="#fff"
  noContentPortal={false}
  noScrollOnKeyboard={false}
  visible={true}
>
  <div>
    Page #1
  </div>
</ViewContainer>
`;
